[metadata]
name = arenapy
version = 0.1.4
author = Josh Behlen
author_email = behlenjosh@gmail.com
description = A package that gives easy access to the Arena Solutions API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jbehlen2/arenapy
project_urls =
    Bug Tracker = https://github.com/jbehlen2/arenapy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    requests;python_version>'3.6'
python_requires = >=3.6

[options.packages.find]
where = src